exercices/brokenapp/service-myapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
  namespace: myapp
spec:
  selector:
    app: myapp
  ports:
    - name: http-flask
      protocol: TCP
      port: 80
      targetPort: 5000
