exercices/brokenapp/gateway-myapp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-app-gateway
  namespace: myapp
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 5000
      name: http-flask
      protocol: HTTP
    hosts:
    - my-app-gateway.apps-crc.testing
